# wadaily-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  diff.txt  entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-sakura-apprun.yml
app/: config.py  main.py
app/graph/: nodes.py  state.py  utils.py  workflow.py
app/routers/: agora.py  sessions.py  transcript.py
app/schemas/: analysis.py  session.py
app/services/: session_store.py
app/utils/: prompts.py
docs/: WEBSOCKET_TOPICS.md  architecture.md
scripts/: test_api_manual.sh  test_generators.py  test_optimization.py  test_profile_manual.py  test_scorer.py  test_topic_tracker.py  test_websocket.py  test_websocket_close.py  websocket_client_example.ts
tests/: TEST_GUIDE.md  test_sessions_api.py  test_workflow.py
