[tool.poetry]
name = "wadaily-api"
version = "0.1.0"
description = "WadailyのバックエンドAPI"
authors = ["urassh <urassh.1011@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
agora-token-builder = "^1.0.0"
python-dotenv = "^1.0.0"
langgraph = "^1.0.4"
langchain-openai = "^1.1.0"
numpy = "^2.3.5"
tiktoken = "^0.12.0"
redis = "^7.1.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
black = "^25.11.0"
ruff = "^0.14.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]